--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parkingpraderas",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://SaraMoreiraG.github.io/Parking-Praderas/",
+  "homepage": "https://parkinglaspraderas.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
