--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Setup Node
       uses: actions/setup-node@v2
       with:
-        node-version: '18'
+        node-version: '20'
 
     - name: Install dependencies
       run: npm install
@@ -28,10 +28,10 @@ jobs:
       run: |
         git config --global user.name "SaraMoreiraG"
         git config --global user.email "sara_moreira@hotmail.es"
+        npx gh-pages -d build -r https://x-access-token:${{ secrets.GH_PAGES_TOKEN }}@github.com/SaraMoreiraG/Parking-Praderas.git \
         REACT_APP_STRIPE_CARAVANA_1=${{ secrets.REACT_APP_STRIPE_CARAVANA_1 }} \
-        REACT_APP_STRIPE_CARAVANA_6=${{ secrets.REACT_APP_STRIPE_CARAVANA_6 }} \
+        REACT_APP_STRIPE_CARAVANA_2=${{ secrets.REACT_APP_STRIPE_CARAVANA_2 }} \
         REACT_APP_STRIPE_AUTOCARAVANA_1=${{ secrets.REACT_APP_STRIPE_AUTOCARAVANA_1 }} \
-        REACT_APP_STRIPE_AUTOCARAVANA_6=${{ secrets.REACT_APP_STRIPE_AUTOCARAVANA_6 }} \
+        REACT_APP_STRIPE_AUTOCARAVANA_2=${{ secrets.REACT_APP_STRIPE_AUTOCARAVANA_2 }} \
         REACT_APP_STRIPE_CAMION_1=${{ secrets.REACT_APP_STRIPE_CAMION_1 }} \
-        REACT_APP_STRIPE_CAMION_6=${{ secrets.REACT_APP_STRIPE_CAMION_6 }} \
-        npx gh-pages -d build -r https://x-access-token:${{ secrets.GH_PAGES_TOKEN }}@github.com/SaraMoreiraG/Parking-Praderas.git
+        REACT_APP_STRIPE_CAMION_2=${{ secrets.REACT_APP_STRIPE_CAMION_2 }}
