--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,10 @@ jobs:
       run: |
         git config --global user.name "SaraMoreiraG"
         git config --global user.email "sara_moreira@hotmail.es"
-        npx gh-pages -d build -r https://x-access-token:${{ secrets.GH_PAGES_TOKEN }}@github.com/SaraMoreiraG/Parking-Praderas.git \
         REACT_APP_STRIPE_CARAVANA_1=${{ secrets.REACT_APP_STRIPE_CARAVANA_1 }} \
         REACT_APP_STRIPE_CARAVANA_2=${{ secrets.REACT_APP_STRIPE_CARAVANA_2 }} \
         REACT_APP_STRIPE_AUTOCARAVANA_1=${{ secrets.REACT_APP_STRIPE_AUTOCARAVANA_1 }} \
         REACT_APP_STRIPE_AUTOCARAVANA_2=${{ secrets.REACT_APP_STRIPE_AUTOCARAVANA_2 }} \
         REACT_APP_STRIPE_CAMION_1=${{ secrets.REACT_APP_STRIPE_CAMION_1 }} \
-        REACT_APP_STRIPE_CAMION_2=${{ secrets.REACT_APP_STRIPE_CAMION_2 }}
+        REACT_APP_STRIPE_CAMION_2=${{ secrets.REACT_APP_STRIPE_CAMION_2 }} \
+        npx gh-pages -d build -r https://x-access-token:${{ secrets.GH_PAGES_TOKEN }}@github.com/SaraMoreiraG/Parking-Praderas.git
